--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "extensions/jit_image_manipulation"]
 	path = extensions/jit_image_manipulation
 	url = git://github.com/pointybeard/jit_image_manipulation.git
+[submodule "extensions/profiledevkit"]
+	path = extensions/profiledevkit
+	url = git://github.com/symphony/profiledevkit.git
+[submodule "extensions/debugdevkit"]
+	path = extensions/debugdevkit
+	url = git://github.com/symphony/debugdevkit.git
