Cleanup, some sections editor fixes.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "extensions/debugdevkit"]
 	path = extensions/debugdevkit
 	url = git://github.com/symphony/debugdevkit.git
+[submodule "extensions/textboxfield"]
+	path = extensions/textboxfield
+	url = git://github.com/rowan-lewis/textboxfield.git
